--- a/wa_profile/auspice_config.json
+++ b/wa_profile/auspice_config.json
@@ -93,7 +93,7 @@
     "color_by": "division",
     "distance_measure": "num_date",
     "geo_resolution": "division",
-    "map_triplicate": true,
+    "map_triplicate": false,
     "branch_label": "none"
   },
   "filters": [
@@ -108,6 +108,7 @@
   "panels": [
     "tree",
     "map",
-    "entropy"
+    "entropy",
+    "frequencies"
   ]
 }
