--- a/wa_profile/builds.yaml
+++ b/wa_profile/builds.yaml
@@ -1,6 +1,7 @@
 # Defines path to custom rules
 custom_rules:
   - wa_profile/add_dates.smk
+  - wa_profile/download_preprocessed.smk
 
 S3_BUCKET: "nextstrain-ncov-private"
 
