--- a/defaults/parameters.yaml
+++ b/defaults/parameters.yaml
@@ -3,8 +3,9 @@
 # To temporarily override or provide a value, you can use snakemake's --config
 # or --configfile options.
 ---
-# conda environment file to use by default
-conda_environment: "../envs/nextstrain.yaml"
+# conda environment file to use by default.
+# This must be a relative path to the top-level Snakefile directory (e.g., `ncov/`).
+conda_environment: "workflow/envs/nextstrain.yaml"
 
 # These are the two main starting files for the run.
 # If they do not exist, we will attempt to fetch them from a S3 bucket (see below)
