--- a/wa_profile/rhino/config.yaml
+++ b/wa_profile/rhino/config.yaml
@@ -42,7 +42,7 @@ show-failed-logs: True
 # "partition". Jobs submitted to the "restart" partition will start running
 # almost immediately, but they may also be killed at any moment when someone
 # else needs those resources. This is analogous to the spot resources on AWS.
-cluster-config: wa_profile/cluster.json
+cluster-config: wa_profile/rhino/cluster.json
 
 # Submit jobs to the cluster with SLURM's DRMAA bindings. The string associated
 # with this key tells SLURM how to map cluster resources with those defined in
