--- a/wa_profile/auspice_config.json
+++ b/wa_profile/auspice_config.json
@@ -105,14 +105,17 @@
     "region"
   ],
   "display_defaults": {
-    "color_by": "division",
+    "color_by": "clade_membership",
     "distance_measure": "num_date",
-    "geo_resolution": "division",
-    "map_triplicate": false,
-    "branch_label": "clade"
+    "geo_resolution": "location",
+    "map_triplicate": true,
+    "branch_label": "clade",
+    "transmission_lines": false
   },
   "filters": [
     "recency",
+    "clade_membership",
+    "location",
     "division",
     "country",
     "region",
