--- a/wa_profile/builds.yaml
+++ b/wa_profile/builds.yaml
@@ -13,12 +13,12 @@ files:
 # Define WA builds.
 builds:
   wa_mar20-jun20:
-   title: "Washington-focused SARS-CoV-2 genomic analysis: Through June 2020"
-   colors: wa_profile/colors.tsv
-   description: wa_profile/descriptions/mar20-jun20_description.md
-   division: Washington
-   latest_date: 2020-06-30
-   subsampling_scheme: early
+    title: "Washington-focused SARS-CoV-2 genomic analysis: Through June 2020"
+    colors: wa_profile/colors.tsv
+    description: wa_profile/descriptions/mar20-jun20_description.md
+    division: Washington
+    latest_date: 2020-06-30
+    subsampling_scheme: early
 
   wa_jul20-oct20:
     title: "Washington-focused SARS-CoV-2 genomic analysis: July-October 2020"
@@ -27,7 +27,7 @@ builds:
     division: Washington
     earliest_date: 2020-07-01
     latest_date: 2020-10-31
-    subsampling_scheme: time-window
+    subsampling_scheme: month
 
   wa_4m:
     title: "Washington-focused SARS-CoV-2 genomic analysis: Past four months"
@@ -42,14 +42,6 @@ builds:
     description: wa_profile/descriptions/year_description.md
     division: Washington
     subsampling_scheme: one-year
-
-# Removes sequence from S dropout for 1y & 4m build
-filter:
-  wa_1y:
-    exclude_where: "purpose_of_sequencing='S dropout'"
-
-  wa_4m:
-    exclude_where: "purpose_of_sequence='S dropout'"
 
 
 # Define subsampling scheme for builds. This scheme should include as much
@@ -84,6 +76,69 @@ subsampling:
         focus: local-focus
 
   time-window:
+    # Subsampling for a given time window
+    local-focus:
+      # Evenly sample from earliest_date to latest_date for the current division.
+      group_by: "year month"
+      max_sequences: 1800
+      max_date: --max-date {latest_date}
+      min_date: --min-date {earliest_date}
+      query: --query "(country == 'USA' & division == '{division}' & purpose_of_sequencing != 'S dropout')"
+    usa-context:
+      # Sampling in the time window from other divisions in the USA, prioritizing
+      # samples genetically similar to the current division's sequences.
+      group_by: "year month"
+      max_sequences: 720
+      max_date: --max-date {latest_date}
+      min_date: --min-date {earliest_date}
+      query: --query "(country == 'USA' & division != '{division}' & purpose_of_sequencing != 'S dropout')"
+      priorities:
+        type: proximity
+        focus: local-focus
+    global-context:
+      # Even sampling in the time window from across the world excluding the USA,
+      # prioritizing samples genetically similar to current division's sequences.
+      group_by: "region year month"
+      max_sequences: 360
+      max_date: --max-date {latest_date}
+      min_date: --min-date {earliest_date}
+      query: --query "(country != 'USA' & purpose_of_sequencing != 'S dropout')"
+      priorities:
+        type: proximity
+        focus: local-focus
+    local-context-early:
+      # Even sampling before the time window for the current division,
+      # prioritizing samples genetically similar to divison's sequences
+      # within the time window.
+      group_by: "year month"
+      max_sequences: 500
+      max_date: --max-date {earliest_date}
+      query: --query "(country == 'USA' & division == '{division}' & purpose_of_sequencing != 'S dropout')"
+      priorities:
+        type: proximity
+        focus: local-focus
+    usa-context-early:
+      # Even sampling before the time window for other divisions in the USA,
+      # prioritizing samples genetically similar to the division.
+      group_by: "year month"
+      max_sequences: 200
+      max_date: --max-date {earliest_date}
+      query: --query "(country == 'USA' & division != '{division}' & purpose_of_sequencing != 'S dropout')"
+      priorities:
+        type: proximity
+        focus: local-context-early
+    global-context-early:
+      # Even sampling before the time window from the world, excluding USA,
+      # prioritizing samples genetically similar to the division.
+      group_by: "region year month"
+      max_sequences: 100
+      max_date: --max-date {earliest_date}
+      query: --query "(country != 'USA' & purpose_of_sequencing != 'S dropout')"
+      priorities:
+        type: proximity
+        focus: local-context-early
+
+  month:
     # Subsampling for a given time window
     local-focus:
       # Evenly sample from earliest_date to latest_date for the current division.
@@ -152,14 +207,14 @@ subsampling:
       group_by: "year month"
       max_sequences: 3000
       min_date: --min-date {earliest_date}
-      query: --query "(country == 'USA' & division == '{division}')"
+      query: --query "(country == 'USA' & division == '{division}' & purpose_of_sequencing != 'S dropout')"
     usa-context:
       # Evenly samples across time from USA prioritizing samples geneticaly
       # similar to current division's sequences.
       group_by : "year month"
       max_sequences: 1200
       min_date: --min-date {earliest_date}
-      query: --query "(country == 'USA' & division != '{division}')"
+      query: --query "(country == 'USA' & division != '{division}'& purpose_of_sequencing != 'S dropout')"
       priorities:
         type: proximity
         focus: local-focus
@@ -168,7 +223,7 @@ subsampling:
       group_by: "year month"
       max_sequences: 600
       min_date: --min-date {earliest_date}
-      query: --query "(country != 'USA')"
+      query: --query "(country != 'USA'& purpose_of_sequencing != 'S dropout')"
       priorities:
         type: proximity
         focus: local-focus
@@ -176,3 +231,4 @@ subsampling:
       group_by: "year month division"
       max_sequences: 200
       max_date: --max-date {earliest_date}
+      query: --query "(purpose_of_sequencing != 'S dropout')"
