--- a/wa_profiles/wa-external/config.yaml
+++ b/wa_profiles/wa-external/config.yaml
@@ -1,5 +1,6 @@
 configfile:
-  - wa_profile/builds.yaml
+  - wa_profiles/wa/builds.yaml
+  - wa_profiles/wa-external/custom_rules.yaml
 
 cores: 8
 keep-going: True
