--- a/wa_profiles/wa/builds.yaml
+++ b/wa_profiles/wa/builds.yaml
@@ -1,45 +1,41 @@
-# Defines path to custom rules
-custom_rules:
-  - wa_profile/add_dates.smk
-
 S3_BUCKET: "nextstrain-ncov-private"
 
 # Define custom auspice configuration to enable frequencies.
 files:
-  auspice_config: "wa_profile/auspice_config.json"
+  auspice_config: "wa_profiles/wa/auspice_config.json"
 
 # Define WA builds.
 builds:
-  wa_mar20-jun20:
-   title: "Washington-focused SARS-CoV-2 genomic analysis: Through June 2020"
-   colors: wa_profile/colors.tsv
-   description: wa_profile/descriptions/mar20-jun20_description.md
-   division: Washington
-   latest_date: 2020-06-30
-   subsampling_scheme: early
+#  wa_mar20-jun20:
+#   title: "Washington-focused SARS-CoV-2 genomic analysis: Through June 2020"
+#   colors: wa_profiles/wa/colors.tsv
+#   description: wa_profiles/wa/descriptions/mar20-jun20_description.md
+#   division: Washington
+#   latest_date: 2020-06-30
+#   subsampling_scheme: early
 
-  wa_jul20-oct20:
-    title: "Washington-focused SARS-CoV-2 genomic analysis: July-October 2020"
-    colors: wa_profile/colors.tsv
-    description: wa_profile/descriptions/jul20-oct20_description.md
-    division: Washington
-    earliest_date: 2020-07-01
-    latest_date: 2020-10-31
-    subsampling_scheme: time-window
+#  wa_jul20-oct20:
+#    title: "Washington-focused SARS-CoV-2 genomic analysis: July-October 2020"
+#    colors: wa_profiles/wa/colors.tsv
+#    description: wa_profiles/wa/descriptions/jul20-oct20_description.md
+#    division: Washington
+#    earliest_date: 2020-07-01
+#    latest_date: 2020-10-31
+#    subsampling_scheme: time-window
 
   wa_4m:
     title: "Washington-focused SARS-CoV-2 genomic analysis: Past four months"
-    colors: wa_profile/colors.tsv
-    description: wa_profile/descriptions/four-months_description.md
+    colors: wa_profiles/wa/colors.tsv
+    description: wa_profiles/wa/descriptions/four-months_description.md
     division: Washington
     subsampling_scheme: time-window
 
-  wa_1y:
-    title: "Washington-focused SARS-CoV-2 genomic analysis: Past year"
-    colors: wa_profile/colors.tsv
-    description: wa_profile/descriptions/year_description.md
-    division: Washington
-    subsampling_scheme: one-year
+#  wa_1y:
+#    title: "Washington-focused SARS-CoV-2 genomic analysis: Past year"
+#    colors: wa_profile/colors.tsv
+#    description: wa_profiles/wa/descriptions/year_description.md
+#    division: Washington
+#    subsampling_scheme: one-year
 
 # Define subsampling scheme for builds. This scheme should include as much
 # local diversity for a given division as possible and contextual samples from
