--- a/wa_profiles/wa/builds.yaml
+++ b/wa_profiles/wa/builds.yaml
@@ -8,7 +8,7 @@ files:
 builds:
   wa_mar20-jun20:
     title: "Washington-focused SARS-CoV-2 genomic analysis: Through June 2020"
-    colors: wa_profiles/colors.tsv
+    colors: wa_profiles/wa/colors.tsv
     description: wa_profiles/wa/descriptions/mar20-jun20_description.md
     division: Washington
     latest_date: 2020-06-30
